<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/TextInputLayout.White">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_edittext_email"
            style="@style/EditText.White"
            android:drawableStart="@drawable/ic_input_user"
            android:hint="@string/login_input_email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/TextInputLayout.White"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textColorWhite">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_edittext_password"
            style="@style/EditText.White"
            android:drawableStart="@drawable/ic_input_password"
            android:hint="@string/login_input_password_hint"
            android:imeOptions="actionDone"
            android:maxLength="16" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgot_button"
        style="@style/ButtonBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/login_password_forget" />

</LinearLayout>